--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="header"> <h1> Shaw's News</h1></div>
+	<Header class="header"> <h1> Shaw's News</h1></Header>
 	<div class="main">
 		<div class="latest-news-section">
 			<h3>Latest News Articles</h3>
